--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,20 @@
-<div class="container">
-  <h1>Gráficos dinámicos <small>Angular</small></h1>
-  <hr>
-  
-  <app-linea></app-linea>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Gráficos dinámicos <small>Angular</small></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/linea']">Línea</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/barra']">Barra</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<div class="container mt-4">  
+  <router-outlet></router-outlet>
 </div>
