--- a/src/app/components/barra/barra.component.html
+++ b/src/app/components/barra/barra.component.html
@@ -1,3 +1,15 @@
-<p>
-  barra works!
-</p>
+<div>
+  <div>
+    <div style="display: block">
+      <canvas baseChart
+        [datasets]="barChartData"
+        [labels]="barChartLabels"
+        [options]="barChartOptions"
+        [plugins]="barChartPlugins"
+        [legend]="barChartLegend"
+        [chartType]="barChartType">
+      </canvas>
+    </div>
+    <button mat-button mat-raised-button color="primary" class="btn btn-primary" (click)="randomize()">Random</button>
+  </div>
+</div>
