--- a/src/app/components/linea/linea.component.html
+++ b/src/app/components/linea/linea.component.html
@@ -2,16 +2,16 @@
   <div class="col-md-6">
 
     <div style="display: block;">
-      <canvas baseChart width="100" height="100"
-                  [datasets]="lineChartData"
-                  [labels]="lineChartLabels"
-                  [options]="lineChartOptions"
-                  [colors]="lineChartColors"
-                  [legend]="lineChartLegend"
-                  [chartType]="lineChartType"
-                  [plugins]="lineChartPlugins"
-                  (chartHover)="chartHovered($event)"
-                  (chartClick)="chartClicked($event)"></canvas>
+      <canvas baseChart width="400" height="400"
+                [datasets]="lineChartData"
+                [labels]="lineChartLabels"
+                [options]="lineChartOptions"
+                [colors]="lineChartColors"
+                [legend]="lineChartLegend"
+                [chartType]="lineChartType"
+                (chartHover)="chartHovered($event)"
+                (chartClick)="chartClicked($event)"></canvas>
+
     </div>
   </div>
 
@@ -24,10 +24,10 @@
         <td *ngFor="let label of lineChartLabels; let j=index">{{d && d.data[j]}}</td>
       </tr>
     </table>
-    <button mat-button mat-raised-button color="primary" class="btn btn-primary mr-2" (click)="randomize()">Randomize</button>
-    <button mat-button mat-raised-button color="primary" class="btn btn-primary mr-2" (click)="pushOne()">Push</button>
+    <button mat-button mat-raised-button color="primary" class="btn btn-primary mr-2" (click)="randomize()">Random</button>
+    <!-- <button mat-button mat-raised-button color="primary" class="btn btn-primary mr-2" (click)="pushOne()">Push</button>
     <button mat-button mat-raised-button color="primary" class="btn btn-primary mr-2" (click)="changeColor()">Recolor</button>
     <button mat-button mat-raised-button color="primary" class="btn btn-primary mr-2" (click)="hideOne()">Toggle Series B</button>
-    <button mat-button mat-raised-button color="primary" class="btn btn-primary" (click)="changeLabel()">Change Label</button>
+    <button mat-button mat-raised-button color="primary" class="btn btn-primary" (click)="changeLabel()">Change Label</button> -->
   </div>
 </div>
